Разработан блок ShopLatest, страница Shop, добавленны новые компоненты

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,15 +3,16 @@ $color-light: #ffffff;
 $color-gray: #979797;
 $color-dark: #000000;
 $color-ligth-gray: #efefef;
+$color-accent-light: #A18A68;
 
 //Breakpoints
 $breakpoints-xxl: 1680px;
 $breakpoints-xl: 1440px;
-$breakpoints-l: 1200px;
+$breakpoints-l: 1280px;
 $breakpoints-m: 992px;
 $breakpoints-s: 767px;
 $breakpoints-xs: 376px;
 
 //Шрифты
-
 $main-font: "DM Sans", sans-serif;
+$secondary-font: "Allerta Stencil", sans-serif;
