--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -7,3 +7,14 @@
     url("../fonts/DMSans-Variable.woff2") format("woff2-variations");
   font-weight: 400 700;
 }
+
+@font-face {
+  font-family: "Allerta Stencil";
+  src: 
+    local("Allerta Stencil"),
+    local("AllertaStencil"),
+    url("../fonts/AllertaStencil-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
