--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,7 +3,7 @@ $color-light: #ffffff;
 $color-gray: #979797;
 $color-dark: #000000;
 $color-ligth-gray: #efefef;
-$color-accent-light: #A18A68;
+$color-accent-light: #a18a68;
 
 //Breakpoints
 $breakpoints-xxl: 1680px;
