--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,5 +14,5 @@ $breakpoints-s: 767px;
 $breakpoints-xs: 376px;
 
 //Шрифты
-$main-font: "DM Sans", sans-serif;
-$secondary-font: "Allerta Stencil", sans-serif;
+$main-font: 'DM Sans', sans-serif;
+$secondary-font: 'Allerta Stencil', sans-serif;
