Исправленны ошибки, разработан компонент уведомления

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,6 +3,8 @@ $color-light: #ffffff;
 $color-gray: #979797;
 $color-dark: #000000;
 $color-ligth-gray: #efefef;
+$color-accent-main: #a18a68;
+$color-accent-red: #ff0000;
 
 //Breakpoints
 $breakpoints-xxl: 1680px;
@@ -14,4 +16,4 @@ $breakpoints-xs: 376px;
 
 //Шрифты
 
-$main-font: "DM Sans", sans-serif;
+$main-font: 'DM Sans', sans-serif;
