--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -3,3 +3,12 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin reset-appearance {
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+}
