--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -4,7 +4,7 @@
   src:
     local('DM Sans'),
     local('DMSans'),
-    url('~/assets/fonts/DMSans-Variable.woff2') format('woff2-variations');
+    url('/fonts/DMSans-Variable.woff2') format('woff2-variations');
   font-display: swap;
 }
 
@@ -15,6 +15,6 @@
   src:
     local('Allerta Stencil'),
     local('AllertaStencil'),
-    url('~/assets/fonts/AllertaStencil-Regular.woff2') format('woff2');
+    url('/fonts/AllertaStencil-Regular.woff2') format('woff2');
   font-display: swap;
 }
